add responsive index & menu

--- a/src/pages/calendar.jade
+++ b/src/pages/calendar.jade
@@ -12,7 +12,7 @@ html(lang='en')
             a.calendar__controls-item(href="#") пилатес
             a.calendar__controls-item(href="#") функциональный тренинг
             select.calendar__controls-item.calendar__controls-item--trainer
-              option(value="initial" disabled selected) Выбрать тренера
+              option(value="initial" disabled selected) выбрать тренера
               option(value="Elena") Елена Смолина
               option(value="Andrey") Андрей Смольный
           .calendar__dates
