--- a/src/pages/courses.jade
+++ b/src/pages/courses.jade
@@ -7,13 +7,13 @@ html(lang='en')
     +header
     .wrapper
       .divided-page
-        .page-half
-          a.course.course--pilates(href="pilates.html")
+        .page-half.animsition
+          a.course.course--pilates.animsition-link(href="pilates.html")
             .course__content
               h2.course__name Пилатес
               p.course__comment программы
-        .page-half
-          a.course.course--functional(href="functional.html")
+        .page-half.animsition
+          a.course.course--functional.animsition-link(href="functional.html")
             .course__content
               h2.course__name Функциональный тренинг
               p.course__comment программы
