--- a/src/pages/pilates.jade
+++ b/src/pages/pilates.jade
@@ -3,7 +3,7 @@ html(lang='en')
   include ../templates/head.jade
   include ../templates/mixins.jade
   
-  body
+  body.animsition
     +header('', 'menu--black')
     .wrapper
       .divided-page
