--- a/src/styles/blocks/socials.less
+++ b/src/styles/blocks/socials.less
@@ -3,7 +3,7 @@
   align-items: center;
   
   @media screen and (max-width: @screen-sm) {
-    display: none;
+//    display: none;
   }
   &--modal {
     @media screen and (max-width: @screen-md) {
