--- a/src/styles/blocks/title.less
+++ b/src/styles/blocks/title.less
@@ -41,6 +41,7 @@
   
   &__btn {
     display: none;
+    color: #fff;
     
     @media screen and (max-width: @screen-md) {
       display: inline-block;
