--- a/src/templates/head.jade
+++ b/src/templates/head.jade
@@ -6,6 +6,7 @@ head
   link(rel='stylesheet', href='css/style.css')
   script(type="text/javascript", src="js/jquery.min.js")
   script(type="text/javascript", src="js/jquery.fancybox.pack.js")
+  script(type="text/javascript", src="js/animsition.min.js")
   script(type="text/javascript", src="js/script.js")
   meta(name="viewport", content="width=device-width, initial-scale=1, user-scalable=0")
   meta(name="format-detection", content="telephone=no")
