--- a/src/styles/blocks/calendar.less
+++ b/src/styles/blocks/calendar.less
@@ -36,6 +36,12 @@
       background: url(../img/arrow-white.png) no-repeat;
       background-size: 15px 11px;
       background-position: 218px 16px;
+      text-transform: none;
+      background: #000;
+      
+      option {
+        color: #fff;
+      }
     }
   }
   
