--- a/src/styles/blocks/gallery.less
+++ b/src/styles/blocks/gallery.less
@@ -14,11 +14,7 @@
     
     &:hover {
       
-      .gallery__item-img {
-        -webkit-filter: blur(2px);
-      }
-            
-      &:after {
+      .gallery__item-link:after {
         content: '';
         display: block;
         background: url(../img/plus.png) no-repeat;
@@ -30,6 +26,11 @@
         top: 50%;
         margin-left: -35px;
         margin-top: -35px;
+        z-index: 2;
+      }
+      
+      .gallery__item-img {
+        -webkit-filter: blur(2px);
       }
     }
     
@@ -42,6 +43,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    position: relative;
   }
   
   &__item-img {
