--- a/src/styles/blocks/menu.less
+++ b/src/styles/blocks/menu.less
@@ -8,6 +8,44 @@
     
     @media screen and (max-width: @screen-md) {
       display: none;
+      
+      &--active {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        
+        &:before {
+          content: '';
+          display: block;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+          background: rgba(0, 0, 0, .8);
+          position: absolute;
+        }
+      }
+    }
+  }
+  
+  &__close {
+    display: none;
+    position: absolute;
+    background: url(../img/close.png) no-repeat;
+    background-size: cover;
+    width: 19px;
+    height: 19px;
+    right: 17px;
+    top: 26px;
+
+    @media screen and (max-width: @screen-md) {
+      display: block;
     }
   }
   
@@ -77,6 +115,7 @@
     
     &--active, &:hover {
       color: @color-main;
+      
       &:after {
         transform: scale3d(1, 1, 1);
       }
@@ -87,6 +126,8 @@
     display: none;
     text-align: center;
     margin-top: 50px;
+    position: relative;
+    z-index: 2;
 
     @media screen and (max-width: @screen-md) {
       display: block;
@@ -100,11 +141,10 @@
     .menu__content {
       justify-content: flex-start;
       padding-left: 20px;
-    }
-//    position: fixed;
     
-    .menu__item-link {
-      color: #000;
+      .menu__item-link {
+        color: #000;
+      }
     }
   }
 }
