--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -3,6 +3,7 @@
 @import 'mixins.less';
 
 @import 'plugins/jquery.fancybox.less';
+@import 'plugins/animsition.less';
 @import 'plugins/plugins-rewrite.less';
 
 @import 'global/global-fonts.less';
