--- a/src/pages/404.jade
+++ b/src/pages/404.jade
@@ -8,5 +8,5 @@ html(lang='en')
     .wrapper
       .error
         .error__header Такой страницы не существует
-        .error__content
+        img.error__content(src="img/404.png", alt="404")
     +footer
