--- a/src/pages/contacts.jade
+++ b/src/pages/contacts.jade
@@ -26,7 +26,7 @@ html(lang='en')
               .contacts__item
                 .contacts__header Часы работы:    
                 .contacts__content с 8:00 до 21:00
-            h2.content__header-big Присоединяйтесь
+            h2.content__header-big Присоединяйтесь:
             a.content__link.content__link--arrowless(href="#") Instagram
             a.content__link.content__link--arrowless(href="#") facebook.ru
             a.content__link.content__link--arrowless(href="#") vk.com
