--- a/src/pages/functional.jade
+++ b/src/pages/functional.jade
@@ -19,5 +19,5 @@ html(lang='en')
             p.content__text Метод пилатеса делает упор на взаимодействие разума и тела при выполнении упражнений. Выполнение упражнений пилатеса сопровождается концентрацией на дыхательном ритме, правильности выполнения упражнения и осознанием действия каждого упражнения на ту или иную группу мышц.
             p.content__text Пилатес укрепляет мышцы пресса, улучшает баланс и координацию, а также снижает стресс. Упражнения пилатеса безопасны и подходят для широкого возрастного спектра[источник не указан 1758 дней]. Пилатесом можно заниматься как в фитнес-клубе, так и самостоятельно, дома.
             p.content__text Метод пилатеса делает упор на взаимодействие разума и тела при выполнении упражнений. Выполнение упражнений пилатеса сопровождается концентрацией на дыхательном ритме
-            a.content__link(href="#") Посмотреть расписание занятий 
-      +footer('footer--transparent', '', 'socials--black')
+            a.content__link(href="calendar.html") Посмотреть расписание занятий 
+      +footer('footer--transparent', 'phone--tablet-black', 'socials--black')
