--- a/src/pages/pilates.jade
+++ b/src/pages/pilates.jade
@@ -52,9 +52,9 @@ html(lang='en')
                   td.content__table-cell 4 345
                   td.content__table-cell 4 345
             .content__item
-              h3.content__header-small Список
+              h3.content__header-small Список:
               ul.content__list
                 li.content__list-item Элемент списка 1
                 li.content__list-item Элемент списка 2
                 li.content__list-item Элемент списка 3
-    +footer('footer--transparent', '', 'socials--black')
+    +footer('footer--transparent', 'phone--tablet-black', 'socials--black')
