--- a/src/pages/trainers.jade
+++ b/src/pages/trainers.jade
@@ -35,4 +35,4 @@ html(lang='en')
                   p.content__text Система пилатес включает в себя упражнения для всех частей тела. Данная система упражнений была разработана в начале XX века, но получила наибольшее признание в начале XXI века.
                   p.content__text Система пилатес включает в себя упражнения для всех частей тела. Данная система упражнений была разработана в начале XX века, но получила наибольшее
                   p.content__text Была разработана в начале XX века, но получила наибольшее была разработана в начале XX века
-    +footer('footer--transparent', '', 'socials--black')
+    +footer('footer--transparent', 'phone--tablet-black', 'socials--black')
