--- a/src/styles/blocks/contacts.less
+++ b/src/styles/blocks/contacts.less
@@ -10,6 +10,10 @@
     line-height: 36px;
     font-family: @font-family-main;
     width: 130px;
+
+    @media screen and (max-width: @screen-sm) {
+      width: 105px;
+    }
   }
   
   &__content {
