--- a/src/styles/blocks/phone.less
+++ b/src/styles/blocks/phone.less
@@ -11,4 +11,11 @@
   &--black {
     color: #000;
   }
+  
+  &--tablet-black {
+    
+    @media screen and (max-width: @screen-md) {
+      color: #000;
+    }
+  }
 }
