--- a/src/styles/plugins/plugins-rewrite.less
+++ b/src/styles/plugins/plugins-rewrite.less
@@ -42,6 +42,11 @@
   right: -39px;
   top: 13px;
   background: url(../img/close.png) no-repeat;
+
+  @media screen and (max-width: @screen-md) {
+    right: 0;
+    top: -30px;
+  }
   
   &:hover {
     background: url(../img/close-red.png) no-repeat;
