--- a/src/styles/blocks/content.less
+++ b/src/styles/blocks/content.less
@@ -4,11 +4,24 @@
   height: 100%;
   padding: 135px 20px 40px;
   overflow: auto;
+
+  @media screen and (max-width: @screen-md) {
+    overflow: scroll;
+    padding: 60px 60px 100px;
+  }
+
+  @media screen and (max-width: @screen-sm) {
+    padding: 35px 13px 100px;
+  }
   
   &__header-big, h2 {
     font-size: 36px;
     font-family: @font-family-main;
     margin-bottom: 20px;
+
+    @media screen and (max-width: @screen-sm) {
+      font-size: 24px;
+    }
   }
   
   &__header-small, h3 {
@@ -28,11 +41,15 @@
   &__photos {
     width: 450px;
     margin: 0 auto;
+
+    @media screen and (max-width: @screen-sm) {
+      width: 100%;
+      height: auto;
+    }
   }
   
   &__photos-main {
     width: 100%;
-    height: 218px;
   }
   
   &__photos-thumbnails {
@@ -76,6 +93,13 @@
     height: 40px;
     vertical-align: middle;
     font-family: @font-family-main;
+
+    @media screen and (max-width: @screen-sm) {
+      
+      &:nth-child(n+3) {
+        display: none;
+      }
+    }
   }
   
   &__table-cell, td {
@@ -86,6 +110,13 @@
     width: 25%;
     color: #646464;
     font-family: @font-family-main;
+
+    @media screen and (max-width: @screen-sm) {
+      
+      &:nth-child(n+3) {
+        display: none;
+      }
+    }
   }
   
   &__list, ul {
