--- a/src/styles/blocks/course.less
+++ b/src/styles/blocks/course.less
@@ -6,6 +6,7 @@
   position: relative;
   text-decoration: none;
   height: 100%;
+  flex: 1;
 
   &:before {
     content: '';
@@ -33,13 +34,18 @@
   
   &__content {
     position: relative;
-    z-index: 5;
+    z-index: 2;
   }
   
   &__name {
     font-family: @font-family-main;
     color: #fff;
     font-size: 48px;
+    text-align: center;
+
+    @media screen and (max-width: @screen-sm) {
+      font-size: 36px;
+    }
   }
   
   &__comment {
@@ -48,5 +54,9 @@
     font-size: 24px;
     margin-top: 30px;
     text-align: center;
+
+    @media screen and (max-width: @screen-sm) {
+      font-size: 18px;
+    }
   }
 }
