--- a/src/styles/blocks/error.less
+++ b/src/styles/blocks/error.less
@@ -1,8 +1,6 @@
 .error {
   width: 100%;
   flex: 1;
-//  height: 100%;
-//  position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -14,12 +12,21 @@
     color: #fff;
     margin-bottom: 75px;
     margin-left: 30px;
+
+    @media screen and (max-width: @screen-sm) {
+      font-size: 24px;
+      margin-bottom: 40px;
+      margin-left: 0;
+      text-align: center;
+    }
   }
   
   &__content {
     width: 631px;
-    height: 234px;
-    background: url(../img/404.png) no-repeat;
-    background-size: cover;
+
+    @media screen and (max-width: @screen-sm) {
+      width: 90%;
+      height: auto;
+    }
   }
 }
