--- a/src/styles/blocks/page-half.less
+++ b/src/styles/blocks/page-half.less
@@ -1,3 +1,11 @@
 .page-half {
   width: 50%;
+
+  @media screen and (max-width: @screen-md) {
+    width: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    min-height: 50vh;
+  }
 }
