--- a/src/pages/contacts.jade
+++ b/src/pages/contacts.jade
@@ -9,7 +9,7 @@ html(lang='en')
       .divided-page
         .page-half
           .map
-            iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1540.6352039274514!2d37.54672145273868!3d55.799654167037104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b549c14bc47dc3%3A0x5d903e4d2e181082!2z0JrRgNCw0YHQvdC-0LDRgNC80LXQudGB0LrQsNGPINGD0LsuLCDQnNC-0YHQutCy0LAsINCg0L7RgdGB0LjRjw!5e0!3m2!1sru!2sby!4v1473708963468", frameborder="0", style="border:0", allowfullscreen)
+            iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1540.6352039274514!2d37.54672145273868!3d55.799654167037104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!3m2!1sru!2sby!4v1473708963468", frameborder="0", style="border:0", allowfullscreen)
         .page-half
           .content
             h2.content__header-big Наши контакты
