--- a/src/pages/gallery.jade
+++ b/src/pages/gallery.jade
@@ -9,29 +9,29 @@ html(lang='en')
       ul.gallery
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-1.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-2.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-3.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-4.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-1.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-2.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-3.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-4.jpg", alt="Clients")
         li.gallery__item
           a.gallery__item-link(href="img/main-bg-1.jpg" rel="gallery" data-gallery)
-            img.gallery__item-img(src="http://placehold.it/390x390", alt="Clients")
+            img.gallery__item-img(src="img/gallery-1.jpg", alt="Clients")
     +footer('footer--transparent')
