--- a/src/pages/trainers.jade
+++ b/src/pages/trainers.jade
@@ -8,7 +8,7 @@ html(lang='en')
     .wrapper
       .divided-page
         .page-half
-          .course.course--pilates
+          .course.course--trainers
             .course__content
               h2.course__name Тренеры
         .page-half
@@ -17,8 +17,7 @@ html(lang='en')
               h1.content__header-big Анастасия Фролова
               .trainer__content
                 .trainer__left
-                  //img.trainer__photo(src="img/trainer-1.jpg", alt="Анастасия Фролова")
-                  img.trainer__photo(src="http://placehold.it/200x200/000000", alt="Анастасия Фролова")
+                  img.trainer__photo(src="img/trainer-1.jpg", alt="Анастасия Фролова")
                   a.trainer__schedule.content__link(href="#") Посмотреть расписание
                 .trainer__text
                   p.content__text Система пилатес включает в себя упражнения для всех частей тела. Данная система упражнений была разработана в начале XX века, но получила наибольшее признание в начале XXI века.
@@ -28,8 +27,7 @@ html(lang='en')
               h1.content__header-big Андрей Иванов
               .trainer__content
                 .trainer__left
-                  //img.trainer__photo(src="img/trainer-2.jpg", alt="Анастасия Фролова")
-                  img.trainer__photo(src="http://placehold.it/200x200/000000", alt="Анастасия Фролова")
+                  img.trainer__photo(src="img/trainer-2.jpg", alt="Анастасия Фролова")
                   a.trainer__schedule.content__link(href="#") Посмотреть расписание
                 .trainer__text
                   p.content__text Система пилатес включает в себя упражнения для всех частей тела. Данная система упражнений была разработана в начале XX века, но получила наибольшее признание в начале XXI века.
