--- a/src/styles/blocks/content.less
+++ b/src/styles/blocks/content.less
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   padding: 135px 20px 40px;
-  overflow: auto;
+  overflow: scroll;
 
   @media screen and (max-width: @screen-md) {
     overflow: scroll;
