--- a/src/styles/blocks/course.less
+++ b/src/styles/blocks/course.less
@@ -21,15 +21,22 @@
   }
 
   &--pilates {
-    background: url(http://placehold.it/1920x1080/000000) no-repeat center;
-//      background: url(../img/course-bg-1.jpg) no-repeat center;
+//    background: url(http://placehold.it/1920x1080/000000) no-repeat center;
+    background: url(../img/course-bg-1.jpg) no-repeat center;
     background-size: cover;
   }
 
   &--functional {
-    background: url(http://placehold.it/1920x1080/737373) no-repeat center;
-//      background: url(../img/course-bg-2.jpg) no-repeat center;
+//    background: url(http://placehold.it/1920x1080/737373) no-repeat center;
+    background: url(../img/course-bg-2.jpg) no-repeat center;
     background-size: cover;
+  }
+
+  &--trainers {
+//    background: url(http://placehold.it/1920x1080/737373) no-repeat center;
+    background: url(../img/trainers.jpg) no-repeat center;
+    background-size: cover;
+    background-position: top left;
   }
   
   &__content {
