--- a/src/styles/blocks/modal.less
+++ b/src/styles/blocks/modal.less
@@ -2,6 +2,10 @@
   display: none;
   width: 512px;
   border-bottom: 3px solid @color-main;
+
+  @media screen and (max-width: @screen-md) {
+    width: 100%;
+  }
   
   &__content {
     padding: 40px 25px 60px;
@@ -16,6 +20,10 @@
     font-family: @font-family-main;
     color: #000;
     font-size: 30px;
+
+    @media screen and (max-width: @screen-md) {
+      font-size: 24px;
+    }
   }
   
   &__header-comment {
@@ -24,6 +32,12 @@
     line-height: 24px;
     margin-top: 18px;
     font-family: @font-family-main;
+
+    @media screen and (max-width: @screen-md) {
+      br {
+        display: none;
+      }
+    }
   }
   
   &__about {
