--- a/src/styles/blocks/page-half.less
+++ b/src/styles/blocks/page-half.less
@@ -1,11 +1,14 @@
 .page-half {
   width: 50%;
+  position: relative;
+  height: 100vh;
 
   @media screen and (max-width: @screen-md) {
     width: 100%;
     flex: 1;
     display: flex;
     flex-direction: column;
+    height: auto;
     min-height: 50vh;
   }
 }
