--- a/src/styles/blocks/calendar.less
+++ b/src/styles/blocks/calendar.less
@@ -21,6 +21,8 @@
     
     @media screen and (max-width: @screen-sm) {
       flex-flow: column nowrap;
+      flex-direction: column;
+      flex-wrap: nowrap;
     }
   }
   
@@ -246,6 +248,8 @@
     display: flex;
     justify-content: center;
     flex-flow: column nowrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
     text-decoration: none;
     padding: 0 20px;
     color: #fff;
