--- a/src/styles/blocks/divided-page.less
+++ b/src/styles/blocks/divided-page.less
@@ -5,5 +5,7 @@
 
   @media screen and (max-width: @screen-md) {
     flex-flow: column nowrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
   }
 }
