--- a/src/styles/blocks/error.less
+++ b/src/styles/blocks/error.less
@@ -5,6 +5,8 @@
   justify-content: center;
   align-items: center;
   flex-flow: column nowrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   
   &__header {
     font-size: 36px;
