--- a/src/templates/mixins.jade
+++ b/src/templates/mixins.jade
@@ -29,6 +29,10 @@ mixin footer(footerClass, phoneClass, socialsClass)
   footer.footer(class=footerClass)
     .phone(class=phoneClass) +7 901 111-11-11
     +socials(socialsClass)
+  script(type="text/javascript", src="js/jquery.min.js")
+  script(type="text/javascript", src="js/jquery.fancybox.pack.js")
+  script(type="text/javascript", src="js/animsition.min.js")
+  script(type="text/javascript", src="js/script.js")
 
 
 mixin socials(newClass)
