--- a/src/styles/blocks/content.less
+++ b/src/styles/blocks/content.less
@@ -3,11 +3,15 @@
   width: 100%;
   height: 100%;
   padding: 135px 20px 40px;
-  overflow: scroll;
+  overflow: auto;
 
   @media screen and (max-width: @screen-md) {
-    overflow: scroll;
+    overflow: auto;
     padding: 60px 60px 100px;
+    height: auto;
+    height: 100%;
+    min-height: 50vh;
+    background: #fff;
   }
 
   @media screen and (max-width: @screen-sm) {
