--- a/src/styles/blocks/course.less
+++ b/src/styles/blocks/course.less
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   align-items: center;
   position: relative;
   text-decoration: none;
