--- a/src/styles/blocks/entry-form.less
+++ b/src/styles/blocks/entry-form.less
@@ -2,6 +2,8 @@
   display: flex;
   align-items: center;
   flex-flow: column nowrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   margin: 0 auto;
   width: 306px;
   margin-top: 50px;
