--- a/src/styles/blocks/gallery.less
+++ b/src/styles/blocks/gallery.less
@@ -3,6 +3,8 @@
   display: flex;
   height: 100%;
   flex-flow: row wrap;
+  flex-direction: column;
+  flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
