--- a/src/styles/blocks/menu.less
+++ b/src/styles/blocks/menu.less
@@ -11,7 +11,7 @@
       
       &--active {
         display: flex;
-        flex-flow: column nowrap;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         position: fixed;
@@ -53,7 +53,7 @@
     display: flex;
     
     @media screen and (max-width: @screen-md) {
-      flex-flow: column nowrap;
+      flex-direction: column;
     }
   }
   
