--- a/src/styles/blocks/slider-main.less
+++ b/src/styles/blocks/slider-main.less
@@ -4,7 +4,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background: url(../img/main-bg-1.jpg) no-repeat;
+  background: url(../img/main-bg-1.jpg) no-repeat left bottom;
     
   @media screen and (max-width: @screen-md) {
     background-position: bottom left!important;
